resources/assets/css/style.css
	*{margin:0; padding:0;}
	a {
		text-decoration: none;
	}
	a.mainLink {
		color: white;
	}
	a.secondLink {
		color: black;
	}
	a.secondLink :hover {
		color: #ff6e4e;
	}
	.thinBan {
		width: 954px;
		height: 175px;
	}
	
	
	/*keeps links in line and styles*/
	.leftLinks {
		padding: 20px;
		width: 300px;
		padding-top: 10px;
		padding-bottom: 10px;
		background: linear-gradient(#FF4500, #ff6a32);
		border-radius: 20px;
		float: left;
		margin-top: 15px;
	}
	.middleLinks {
		margin: 0 auto;
		padding: 20px;
		width: 200px;
		padding-top: 10px;
		padding-bottom: 10px;
		background: linear-gradient(#FF4500, #ff6a32);
		border-radius: 20px;
		margin-top: 15px;
	}
	.aboutButtonBox {
	margin: 0 auto;
    padding: 20px;
    width: 350px;
    padding-top: 10px;
    padding-bottom: 10px;
    background: linear-gradient(#FF4500, #ff6a32);
    border-radius: 20px;
    margin-top: 15px;
	}
	.rightLinks {
		padding-top: 10px;
		padding-bottom: 10px;
		border-radius: 20px;
		width: 200px;
		float: right;
		margin-top: 15px;
	}
	
	
	/*horizontal gap and wide title*/
	.gap {
		display: inline;
		padding-right: 25px;
	}
	.stretch {
		margin-top: 20px;
		margin-bottom: 40px;
	}
	
	
	
	.box {
		padding-right: 30px;
		padding-left: 30px;
		width: 20;
		padding-top: 10px;
		float: left;
		margin-top: 5px;
	}
	.navBar {
		margin: 0 auto;
		width: 954px;
		height: 50px;
		text-align:center;
		margin-bottom: 15px;
	}
	.imgBan {
		max-width: 100%;
		min-width: 954px;
		height: auto;
	}
	.centre {
		text-align:center;
	}

	html {
		font-family: 'Raleway', sans-serif;
		font-weight: 100;
		height: 100vh;
		margin: 0;
		color: grey;
		min-width: 954px;
	}
	img {
		border: 2px solid grey;
		position: relative;
	}
	.rowImg {
		margin-left: 40px;
	}
	.banner {
		height: 562px;
		position: relative;				
	}
	.Row2 {
		margin-top: 40px;
		margin-bottom: 40px;
	}
	.Row3 {
		margin-top: 40px;
		margin-bottom: 60px;
	}
	.line {
		margin: 0 auto;
		width: 954px;
		border-top: 1px solid grey;
		margin-bottom: 40px;
	}
	.blurb {
		margin: 0 auto;
		width: 954px;
		font-size: 18px;
		color: darkgrey;
	}
	.footer {
		margin: 0 auto;
		background: #4c4c4c;
		border: 1px solid grey;
		padding-top: 30px;
		padding-bottom: 30px;
		height: 120px;
	}
	.footer div {
		display: inline-block;
		vertical-align: top;
	}
	.share {
		text-align: left;
		padding-left: 20px;
		padding-right: 20px;
	}
	.leftShare {
		text-align: left;
		padding-left: 60px;
		padding-right: 20px;
	}
	
	
	/*style text*/
	form h1 {
		font-size: 25px;
		text-align: center;
		background: #FF4500;
		color: white;
		padding: 22px 25px;
		margin: auto;
		margin-bottom: 20px;
	}
	h3 {
		padding-top: 10px;
	}
	h5 {
		color: #FF4500;
	}
	
	
	/*keeps FAQ accordian inline, centre, and colour*/
	.faqHead {
		margin: 0 auto;
		text-align: center;
		font-size: 18px;
	}
	.faqBody {
		margin: 0 auto;
		color: black;
		font-size: 18px;
	}
	.faq {
		margin: 0 auto;
		max-width: 955px;
	}
	
	
	/*these two stop header and footer links from being blue*/
	.JobMatch {
		color:grey;
	}
	.footerBot {
		color: grey;
	}
	
	
	.profImg {
		margin-top: 13px;
		margin-bottom: 13px;
	}
	.centerBox {
		margin-top: 30px;
		width: 955px;
		height: 722px;
		margin: auto;
		margin-bottom: 30px;
		border-top: 1px solid lightgrey;
	}
	.leftCol {
		margin-top: 30px;
		margin-left: 15px;
		width: 280px;
		height: 522px;
		border: 1px solid black;
		background: lightgrey;
		float: left;
		margin-bottom: 30px;
	}
	.rightCol {
		margin-top: 30px;
		float: right;
		width: 600px;
		height: 440px;
		margin-right: 15px;
		margin-bottom: 30px;
		text-align: left;
		padding-top: 41px;
		padding-bottom: 41px;
	}
	.fill {
		color: black;
		padding-top: 10px;
	}
	.review {
		width: 700px;
		margin: 0 auto;
		text-align: left;
	}
	.reviewImg {
		padding-top: 10px;
		height: 100px;
		width: 100px;
		float:left;
		margin-right: 10px;
	}
	.reviewName {
		padding-top: 20px;
	}
	
	/*This part is for the FAQ accordian*/
	button.accordion {
	margin: 0 auto;
    width: 660px;
    background-color: #F1F1F1;
    color: #FF4500;
    cursor: pointer;
    padding: 18px;
    text-align: left;
    transition: 0.4s;
	}
	button.accordion.active, button.accordion:hover {
		background-color: #ddd;
	}
	div.panel {
		margin: 0 auto;
		width: 954px;
		padding-top: 20px;
		padding-bottom: 20px;
		background-color: white;
		display: none;
	}
	
	
	/*This part is for the contact form*/
	input[type=submit] {
		background-color: #FF4500;
		color: white;
		padding: 12px 20px;
		border: none;
		border-radius: 4px;
		cursor: pointer;
	}
	input[type=submit]:hover {
		background-color: #ff6a32;
	}
	.container {
		width: 660px;
		border-radius: 5px;
		padding: 20px;
		margin: 0 auto;
		margin-bottom: 60px;
	}



/*login*/
.forgotA {
	color: #F00;
}
.forgotA:hover {
	color: #FF4500;
}
.middleForm {
	margin: 0 auto;
}
*, *:before, *:after {
  box-sizing: border-box;
}

.loginFormBox {
	margin-top: 20px;
	background: grey;
	padding: 40px;
	width: 700px;
	margin: 0 auto;
	border-radius: 7px;
}

.tab-group {
      list-style: none;
    margin-bottom: 30px;
}
.tab-group:after {
  content: "";
  display: table;
  clear: both;
}
.tab-group li a {
  display: block;
  text-decoration: none;
  padding: 15px;
  background: rgba(160, 179, 176, 0.25);
  color: #ffffff;
  font-size: 20px;
  float: left;
  width: 50%;
  text-align: center;
  cursor: pointer;
  -webkit-transition: .5s ease;
  transition: .5s ease;
}
.tab-group li a:hover {
  background: #cc3600;
  color: #ffffff;
}
.tab-group .active a {
  background: #FF4500;
  color: #ffffff;
}

.tab-content > div:last-child {
  display: none;
}

label {
	position: absolute;
	width: 
	-webkit-transform: translateY(6px);
	transform: translateY(6px);
	left: 13px;
	color: rgba(255, 255, 255, 0.5);
	-webkit-transition: all 0.25s ease;
	transition: all 0.25s ease;
	-webkit-backface-visibility: hidden;
	font-size: 22px;
}

label.active {
  -webkit-transform: translateY(-20px);
          transform: translateY(-20px);
  left: 2px;
  font-size: 16px;
}

label.highlight {
  color: #ffffff;
}

input, textarea {
  font-size: 15px;
    display: block;
    width: 50%;
    height: 100%;
    padding: 5px 10px;
    background: none;
    background-image: none;
    border: 1px solid #a0b3b0;
    color: black;
  border-radius: 0;
  -webkit-transition: border-color .25s ease, box-shadow .25s ease;
  transition: border-color .25s ease, box-shadow .25s ease;
}
input:focus, textarea:focus {
  outline: 0;
  border-color: #FF4500;
}

.field-wrap {
  position: relative;
  margin-bottom: 40px;
}

.topLeft {
  float: left;
  width: 48%;
  margin-right: 4%;
}
.topRight {
  float: right;
  width: 48%;
}

.forgot {
  margin-top: -20px;
  text-align: right;
  color;#ff4500
}

/*account css*/


.logRegDes {
  border-radius: 5px;
  width:100%;
  margin: 0 auto;
  overflow: hidden;
}

p span {
  color: #F00;
}

p {
    margin: 0px;
    font-weight: 500;
    line-height: 2;
    color: grey;
}

input {
	border-radius: 5px 5px 5px 5px;
    border: 1px solid grey;
    margin-bottom: 15px;
    width: 100%;
    height: 40px;
    float: left;
    padding: 0px 15px
}



::-webkit-input-placeholder {
    text-align: center;
    color: black;
}

.form-group {
  overflow: hidden;
  clear: both;
}

.icon-case {
  width: 35px;
  float: left;
  border-radius: 5px 0px 0px 5px;
  background:#ffffff;
  height:42px;
  position: relative;
  text-align: center;
  line-height:40px;
}

.contentform {
	margin: 0 auto;
	width: 100%;
}
.contentformBox {
	background: #f1f1f1;
    padding: 40px;
    width: 700px;
    margin: 0 auto;
    border-radius: 7px;
    margin-top: 40px;
    margin-bottom: 40px;
}


.submitAccForm, .submitLogForm, .submitRegForm  {
  margin: 0 auto;
  margin-left: 25%;
  margin-bottom: 15px;
  background-color: #FF4500;
  color: #FFF;
  text-align: center;
  width: 50%;
  height: 50px;
  padding-bottom: 10px;
  padding-top: 10px;
  border-radius: 7px 7px 7px 7px;
  border-color: #FF4500;
  cursor: pointer;
  font-size: 20px;
  display: inline;
}

.signUpForm{
  margin: 0 auto;
  margin-right: 25%;
  margin-bottom: 15px;
  background-color: #FF4500;
  color: #FFF;
  text-align: center;
  width: 50%;
  height: 50px;
  padding-bottom: 10px;
  padding-top: 10px;
  border-radius: 7px 7px 7px 7px;
  border-color: #FF4500;
  cursor: pointer;
  font-size: 20px;    
}

textarea {
    border-radius: 2px 2px 2px 2px;
    width: 620px;
    height: 100px;
    padding: 10px 5px 5px 10px;
    resize: none;
    border: 1px solid grey;
}


/*formBoxes*/
.leftcontact {
  width:49.5%; 
  float: left;
  box-sizing: border-box;
  padding: 0px 15px 0px 0px;
}
.rightcontact {
  width:49.5%;
  box-sizing: border-box;
  float: right;
}
.centreAccount {
	padding-top: 15px;
	clear: both;
}

#date-of-birth-input input {
    width: 31%;
    margin-right: 2%;
    text-align: center;
}

.dropdown input[type="text"],
.dropdown textarea,
.dropdown select,
.dropdown textarea.form-control {
	   height: 45px;
    width: 290px;
    margin: 0;
    padding: 0 20px;
    background: #f1f1f1;
    border: 1px solid grey;
    font-size: 16px;
    line-height: 20px;
    -moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px;
    -moz-box-shadow: none; -webkit-box-shadow: none; box-shadow: none;
    -o-transition: all .3s; -moz-transition: all .3s; -webkit-transition: all .3s; -ms-transition: all .3s; transition: all .3s;
}

/*profile edits*/ 
	.profileImg {
		margin-top: -100px;
	}
	.wideBan {
		width: 954px;
		height: 200px;
	}
	.quote {
		margin: 0 auto;
		padding: 20px;
		width: 300px;
		padding-top: 10px;
		padding-bottom: 10px;
		background: linear-gradient(#FF4500, #ff6a32);
		border-radius: 20px;
		margin-top: 15px;
		color: white;
	}
	.middleProf {
		margin-top: 5px;
		margin-bottom: 20px;
	}
	.mainProf {
		margin-bottom: 60px;
	}
	.middleProf h4 {
		display: inline-block;
		color: #FF4500;
		margin-top: 20px;
		margin-right: 20px;
	}
	
	
/* browse */
	.jobTab {
		margin: 0 auto;
		width:100%;
		height: 103px;
		border: 1px solid grey;
	}
	.jobTab div {
		display: inline-block;
	}
	.jobBody h3, h4 {
		margin-top: 15px;
		text-align: left;
		vertical-align: center;
	}
	.jobImg {
		width:103px; 
		height: 103px;
	}
	.jobBody {
		width:400px; 
		height: 103px;
	}
	.jobEarn {
		width:76px; 
		height: 103px;
	}
	.bink {
		padding-bottom: 60px;
	}

